--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
     <link rel="stylesheet" href="./pages/index.css" />
     <title>Around Japan</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <img class="logo" src="./img/logo.svg" alt="Logo Around" />
+    </header>
+  </body>
 </html>
