--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <img class="logo" src="./img/logo.svg" alt="Logo Around" />
+      <img class="header__logo" src="./img/logo.svg" alt="Logo Around" />
     </header>
   </body>
 </html>
