--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Around Japan</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <img class="header__logo" src="./img/logo.svg" alt="Logo Around" />
+      <div class="header__line"></div>
     </header>
   </body>
 </html>
