--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./pages/index.css" />
     <title>Around Japan</title>
   </head>
-  <body>
+  <body class="main">
     <header class="header">
       <img class="header__logo" src="./img/logo.svg" alt="Logo Around" />
       <div class="header__line"></div>
