--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <title>Around Japan</title>
   </head>
   <body class="main">
-    <header class="header">
-      <img class="header__logo" src="./img/logo.svg" alt="Logo Around" />
-      <div class="header__line"></div>
-    </header>
+    <div class="main__container">
+      <header class="header">
+        <img class="header__logo" src="./img/logo.svg" alt="Logo Around" />
+        <div class="header__line"></div>
+      </header>
+    </div>
   </body>
 </html>
