style: add base profile section code

--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
         <img class="header__logo" src="./img/logo.svg" alt="Logo Around" />
         <div class="header__line"></div>
       </header>
+      <section class="profile">
+        <div class="profile__container-left">
+          <img
+            class="profile__img"
+            src="./img/profile-image.jpg"
+            alt="Profile picture"
+          />
+        </div>
+        <div class="profile__container-middle">
+          <h1 class="profile__name">Luis Tellez</h1>
+          <h2 class="profile__title">Front-end Developer</h2>
+        </div>
+        <div class="profile__container-right"></div>
+      </section>
     </div>
   </body>
 </html>
