style: add divs for containers

--- a/index.html
+++ b/index.html
@@ -22,10 +22,15 @@
           />
         </div>
         <div class="profile__container-middle">
-          <h1 class="profile__name">Luis Tellez</h1>
+          <div class="profile__subcontainer-left">
+            <h1 class="profile__name">Luis Tellez</h1>
+          </div>
+          <div class="profile__subcontainer-right">
+            <div class="profile__edit-button"></div>
+          </div>
           <h2 class="profile__title">Front-end Developer</h2>
         </div>
-        <div class="profile__container-right"></div>
+        <div class="profile__container-right"><div class="profile__post-button"></div>
       </section>
     </div>
   </body>
