style: add images to html code

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="profile__container-left">
           <img
             class="profile__img"
-            src="./img/profile-image.jpg"
+            src="https://avatars.githubusercontent.com/u/27663011?v=4"
             alt="Profile picture"
           />
         </div>
@@ -26,11 +26,11 @@
             <h1 class="profile__name">Luis Tellez</h1>
           </div>
           <div class="profile__subcontainer-right">
-            <div class="profile__edit-button"></div>
+            <div class="profile__edit-button"><img class="profile__edit-button_icon" src="./img/edit.svg" alt="edit button"></div>
           </div>
           <h2 class="profile__title">Front-end Developer</h2>
         </div>
-        <div class="profile__container-right"><div class="profile__post-button"></div>
+        <div class="profile__container-right"><div class="profile__post-button"><img class="profile__post-button_icon" src="./img/post.svg" alt="post button"></div>
       </section>
     </div>
   </body>
