fix: typos in css

--- a/index.html
+++ b/index.html
@@ -26,11 +26,25 @@
             <h1 class="profile__name">Luis Tellez</h1>
           </div>
           <div class="profile__subcontainer-bottom">
-            <div class="profile__edit-button"><img class="profile__edit-button_icon" src="./img/edit.svg" alt="edit button"></div>
+            <div class="profile__edit-button">
+              <img
+                class="profile__edit-button_icon"
+                src="./img/edit.svg"
+                alt="edit button"
+              />
+            </div>
           </div>
           <h2 class="profile__title">Front-end Developer</h2>
         </div>
-        <div class="profile__container-right"><div class="profile__post-button"><img class="profile__post-button_icon" src="./img/post.svg" alt="post button"></div>
+        <div class="profile__container-right">
+          <div class="profile__post-button">
+            <img
+              class="profile__post-button_icon"
+              src="./img/post.svg"
+              alt="post button"
+            />
+          </div>
+        </div>
       </section>
     </div>
   </body>
