--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
           </div>
         </div>
       </section>
+      <section class="cards">
+        <div class="card__container">
+          <img class="card__img" src="./img/card-1.jpg" alt="Card 1" />
+          <div class="card__text-container">
+            <h2 class="card__title">Valle de Yosemite</h2>
+            <img class="card__like-button" src="./img/like.svg" alt="Like" />
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
