--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
           </div>
         </div>
       </section>
+      <section class="footer">
+        <h2 class="footer__copyright">© 2021 Alrededor de los EEUU</h2>
+      </section>
     </div>
   </body>
 </html>
