--- a/index.html
+++ b/index.html
@@ -100,5 +100,6 @@
         <h2 class="footer__copyright">© 2021 Alrededor de los EEUU</h2>
       </section>
     </div>
+    <script src="./blocks/profile/__edit-button/profile__edit-button.js"></script>
   </body>
 </html>
