style: change div to button

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <div class="profile__container-middle">
           <div class="profile__subcontainer-top">
             <h1 class="profile__name">Luis Tellez</h1>
-            <div class="profile__edit-button">
+            <button class="profile__edit-button">
               <img
                 class="profile__edit-button_icon"
                 src="./img/edit.svg"
                 alt="edit button"
               />
-            </div>
+            </button>
           </div>
           <div class="profile__subcontainer-bottom">
             <h2 class="profile__title">Front-end Developer</h2>
@@ -100,6 +100,9 @@
         <h2 class="footer__copyright">© 2021 Alrededor de los EEUU</h2>
       </section>
     </div>
-    <script src="./blocks/profile/__edit-button/profile__edit-button.js"></script>
+    <script
+      src="./blocks/profile/__edit-button/profile__edit-button.js"
+      defer
+    ></script>
   </body>
 </html>
