feature: add base html code for modal

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
             />
           </div>
         </div>
+
+        <div class="modal">
+          <h2 class="modal__title">Edit profile</h2>
+          <p class="modal__profile-name"></p>
+          <p class="modal__profile-title"></p>
+        </div>
       </section>
       <section class="cards">
         <div class="card__container">
