--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
 
         <div class="modal">
           <h2 class="modal__title">Edit profile</h2>
-          <p class="modal__profile-name"></p>
-          <p class="modal__profile-title"></p>
+          <form class="modal__form">
+            <input class="modal__profile-name" type="text" />
+            <input class="modal__profile-title" type="text" />
+          </form>
         </div>
       </section>
       <section class="cards">
