style: add css to modal__overlay

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class="profile__container-middle">
           <div class="profile__subcontainer-top">
             <h1 class="profile__name">Luis Tellez</h1>
+            <div class="modal__overlay"></div>
             <button class="profile__edit-button">
               <img
                 class="profile__edit-button_icon"
@@ -114,3 +115,26 @@
     ></script>
   </body>
 </html>
+
+<div class="modal-frame">
+  <div class="modal">
+    <div class="modal-inset">
+      <div class="button close"><i class="fa fa-close"></i></div>
+
+      <div class="modal-body">
+        <h3>Such Modal, Much Animate!</h3>
+        <p>
+          Nothing groundbreaking, but I hope you enjoyed <br />
+          the physics for the open/close animation =).
+        </p>
+        <p class="ps">
+          **I know the SASS is a bit messy, I did this on the fly and for fun
+          <br />
+          and w.e. I DO WHAT I WANT!!
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<button class="fancy-btn open">Can I haz Modal?</button>
