style: add close button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         <div class="profile__container-middle">
           <div class="profile__subcontainer-top">
             <h1 class="profile__name">Luis Tellez</h1>
-            <div class="modal__overlay"></div>
             <button class="profile__edit-button">
               <img
                 class="profile__edit-button_icon"
@@ -55,6 +54,30 @@
             <input class="modal__profile-title" type="text" />
           </form>
         </div>
+
+        <div class="modal">
+          <div class="modal__container">
+            <div class="modal__inset">
+              <div class="button close"><i class="fa fa-close"></i></div>
+
+              <div class="modal__body">
+                <h3>Such Modal, Much Animate!</h3>
+                <p>
+                  Nothing groundbreaking, but I hope you enjoyed <br />
+                  the physics for the open/close animation =).
+                </p>
+                <p class="ps">
+                  **I know the SASS is a bit messy, I did this on the fly and
+                  for fun <br />
+                  and w.e. I DO WHAT I WANT!!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-overlay"></div>
+
+        <button class="fancy-btn open">Can I haz Modal?</button>
       </section>
       <section class="cards">
         <div class="card__container">
@@ -136,5 +159,6 @@
     </div>
   </div>
 </div>
+<div class="modal-overlay"></div>
 
 <button class="fancy-btn open">Can I haz Modal?</button>
