--- a/index.html
+++ b/index.html
@@ -58,19 +58,15 @@
         <div class="modal">
           <div class="modal__container">
             <div class="modal__inset">
-              <div class="button close"><i class="fa fa-close"></i></div>
-
+              <div class="modal__close">
+                <img class="modal__close-button" href="./img/close.svg" />
+              </div>
               <div class="modal__body">
-                <h3>Such Modal, Much Animate!</h3>
-                <p>
-                  Nothing groundbreaking, but I hope you enjoyed <br />
-                  the physics for the open/close animation =).
-                </p>
-                <p class="ps">
-                  **I know the SASS is a bit messy, I did this on the fly and
-                  for fun <br />
-                  and w.e. I DO WHAT I WANT!!
-                </p>
+                <h2 class="modal__title">Edit profile</h2>
+                <form class="modal__form">
+                  <input class="modal__profile-name" type="text" />
+                  <input class="modal__profile-title" type="text" />
+                </form>
               </div>
             </div>
           </div>
