feature: add modal close js file

--- a/index.html
+++ b/index.html
@@ -118,9 +118,7 @@
         <h2 class="footer__copyright">© 2021 Alrededor de los EEUU</h2>
       </section>
     </div>
-    <script
-      src="./blocks/profile/__edit-button/profile__edit-button.js"
-      defer
-    ></script>
+    <script src="./blocks/profile/__edit-button/profile__edit-button.js"></script>
+    <script src="./blocks/modal/__close/modal__close.js"></script>
   </body>
 </html>
