--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
           </div>
         </div>
-        <div class="modal-overlay"></div>
+        <div class="modal__overlay"></div>
       </section>
       <section class="cards">
         <div class="card__container">
