refactor: fix modal code

--- a/index.html
+++ b/index.html
@@ -115,6 +115,6 @@
       </section>
     </div>
     <script src="./blocks/profile/__edit-button/profile__edit-button.js"></script>
-    <script src="./blocks/modal/__close/modal__close.js"></script>
+    <script src="./blocks/modal/modal.js"></script>
   </body>
 </html>
