--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <div class="modal__close">
               <img class="modal__close-button" href="./img/close.svg" />
             </div>
+            <img class="modal__close-button" href="./img/close.svg" />
             <h2 class="modal__title">Edit profile</h2>
             <form class="modal__form">
               <input class="modal__profile-name" type="text" />
