--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <img class="modal__close-button" href="./img/close.svg" />
             <h2 class="modal__title">Edit profile</h2>
             <form class="modal__form">
-              <input class="modal__profile-name" type="text" />
+              <input class="modal__profile-name" type="text" value="name" />
               <input class="modal__profile-title" type="text" />
             </form>
           </div>
@@ -116,6 +116,6 @@
       </section>
     </div>
     <script src="./blocks/profile/__edit-button/profile__edit-button.js"></script>
-    <script src="./blocks/modal/modal.js"></script>
+    <script src="./scripts/modal.js"></script>
   </body>
 </html>
