style: add modal__input class to html to style form

--- a/index.html
+++ b/index.html
@@ -55,8 +55,18 @@
             <img class="modal__close-button" href="./img/close.svg" />
             <h2 class="modal__title">Edit profile</h2>
             <form class="modal__form">
-              <input class="modal__profile-name" type="text" value="name" />
-              <input class="modal__profile-title" type="text" />
+              <input
+                class="modal__input modal__profile-name"
+                type="text"
+                value="username"
+                required
+              />
+              <input
+                class="modal__input modal__profile-title"
+                type="text"
+                value="usertitle"
+                required
+              />
             </form>
           </div>
         </div>
