style: add form submit button & related css files

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 value="usertitle"
                 required
               />
+              <button class="modal__form-submit">Save</button>
             </form>
           </div>
         </div>
