fix: modal close

--- a/index.html
+++ b/index.html
@@ -49,9 +49,6 @@
 
         <div class="modal">
           <div class="modal__container">
-            <div class="modal__close">
-              <img class="modal__close-button" href="./img/close.svg" />
-            </div>
             <h2 class="modal__title">Edit profile</h2>
             <form class="modal__form">
               <input
@@ -70,6 +67,7 @@
             </form>
           </div>
         </div>
+        <button class="modal__close"></button>
         <div class="modal__overlay"></div>
       </section>
       <section class="cards">
