style: update save button

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 value="usertitle"
                 required
               />
-              <button class="modal__form-submit">Save</button>
+              <button class="modal__form-submit">Guardar</button>
             </form>
             <button class="modal__close"></button>
           </div>
