style: add transparent background to post button

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
           </div>
         </div>
         <div class="profile__container-right">
-          <div class="profile__post-button">
+          <button class="profile__post-button">
             <img
               class="profile__post-button_icon"
               src="./img/post.svg"
               alt="post button"
             />
-          </div>
+          </button>
         </div>
 
         <div class="modal">
