refactor: change image to button in like button

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <img class="card__img" src="./img/card-1.jpg" alt="Card 1" />
           <div class="card__text-container">
             <h2 class="card__title">Valle de Yosemite</h2>
-            <img class="card__like-button" src="./img/like.svg" alt="Like" />
+            <button class="card__like-button"></button>
           </div>
         </div>
 
