--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <img class="card__img" src="./img/card-1.jpg" alt="Card 1" />
           <div class="card__text-container">
             <h2 class="card__title">Valle de Yosemite</h2>
-            <img class="card__like-button" src="./img/like.svg" alt="Like" />
+            <button class="card__like-button"></button>
           </div>
         </div>
 
@@ -91,7 +91,7 @@
           <img class="card__img" src="./img/card-1.jpg" alt="Card 1" />
           <div class="card__text-container">
             <h2 class="card__title">Valle de Yosemite</h2>
-            <img class="card__like-button" src="./img/like.svg" alt="Like" />
+            <button class="card__like-button"></button>
           </div>
         </div>
 
@@ -99,7 +99,7 @@
           <img class="card__img" src="./img/card-1.jpg" alt="Card 1" />
           <div class="card__text-container">
             <h2 class="card__title">Valle de Yosemite</h2>
-            <img class="card__like-button" src="./img/like.svg" alt="Like" />
+            <button class="card__like-button"></button>
           </div>
         </div>
 
@@ -107,7 +107,7 @@
           <img class="card__img" src="./img/card-1.jpg" alt="Card 1" />
           <div class="card__text-container">
             <h2 class="card__title">Valle de Yosemite</h2>
-            <img class="card__like-button" src="./img/like.svg" alt="Like" />
+            <button class="card__like-button"></button>
           </div>
         </div>
 
@@ -115,7 +115,7 @@
           <img class="card__img" src="./img/card-1.jpg" alt="Card 1" />
           <div class="card__text-container">
             <h2 class="card__title">Valle de Yosemite</h2>
-            <img class="card__like-button" src="./img/like.svg" alt="Like" />
+            <button class="card__like-button"></button>
           </div>
         </div>
       </section>
