fix: adjust typos

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="stylesheet" href="./vendor/fonts.css" />
-    <title>Around Japan</title>
+    <title>Around the US</title>
   </head>
   <body class="main">
     <div class="main__container">
@@ -80,7 +80,7 @@
         </div>
 
         <div class="card__container">
-          <img class="card__img" src="./img/card-1.jpg" alt="Card 1" />
+          <img class="card__img" src="./img/card-1.jpg" alt="Card 2" />
           <div class="card__text-container">
             <h2 class="card__title">Valle de Yosemite</h2>
             <button class="card__like-button"></button>
@@ -88,7 +88,7 @@
         </div>
 
         <div class="card__container">
-          <img class="card__img" src="./img/card-1.jpg" alt="Card 1" />
+          <img class="card__img" src="./img/card-1.jpg" alt="Card 3" />
           <div class="card__text-container">
             <h2 class="card__title">Valle de Yosemite</h2>
             <button class="card__like-button"></button>
@@ -96,7 +96,7 @@
         </div>
 
         <div class="card__container">
-          <img class="card__img" src="./img/card-1.jpg" alt="Card 1" />
+          <img class="card__img" src="./img/card-1.jpg" alt="Card 4" />
           <div class="card__text-container">
             <h2 class="card__title">Valle de Yosemite</h2>
             <button class="card__like-button"></button>
@@ -104,7 +104,7 @@
         </div>
 
         <div class="card__container">
-          <img class="card__img" src="./img/card-1.jpg" alt="Card 1" />
+          <img class="card__img" src="./img/card-1.jpg" alt="Card 5" />
           <div class="card__text-container">
             <h2 class="card__title">Valle de Yosemite</h2>
             <button class="card__like-button"></button>
@@ -112,7 +112,7 @@
         </div>
 
         <div class="card__container">
-          <img class="card__img" src="./img/card-1.jpg" alt="Card 1" />
+          <img class="card__img" src="./img/card-1.jpg" alt="Card 6" />
           <div class="card__text-container">
             <h2 class="card__title">Valle de Yosemite</h2>
             <button class="card__like-button"></button>
