feature: add different cards

--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
       </section>
       <section class="cards">
         <div class="card__container">
-          <img class="card__img" src="./img/card-1.jpg" alt="Card 1" />
+          <img
+            class="card__img"
+            src="./img/card-1.jpg"
+            alt="Valle de Yosemite"
+          />
           <div class="card__text-container">
             <h2 class="card__title">Valle de Yosemite</h2>
             <button class="card__like-button"></button>
@@ -80,41 +84,45 @@
         </div>
 
         <div class="card__container">
-          <img class="card__img" src="./img/card-1.jpg" alt="Card 2" />
+          <img class="card__img" src="./img/card-2.jpg" alt="San Francisco" />
           <div class="card__text-container">
-            <h2 class="card__title">Valle de Yosemite</h2>
+            <h2 class="card__title">San Francisco</h2>
             <button class="card__like-button"></button>
           </div>
         </div>
 
         <div class="card__container">
-          <img class="card__img" src="./img/card-1.jpg" alt="Card 3" />
+          <img class="card__img" src="./img/card-3.jpg" alt="Hollywood" />
           <div class="card__text-container">
-            <h2 class="card__title">Valle de Yosemite</h2>
+            <h2 class="card__title">Hollywood</h2>
             <button class="card__like-button"></button>
           </div>
         </div>
 
         <div class="card__container">
-          <img class="card__img" src="./img/card-1.jpg" alt="Card 4" />
+          <img class="card__img" src="./img/card-4.jpg" alt="New York" />
           <div class="card__text-container">
-            <h2 class="card__title">Valle de Yosemite</h2>
+            <h2 class="card__title">New York</h2>
             <button class="card__like-button"></button>
           </div>
         </div>
 
         <div class="card__container">
-          <img class="card__img" src="./img/card-1.jpg" alt="Card 5" />
+          <img
+            class="card__img"
+            src="./img/card-5.jpg"
+            alt="Tower of Liberty"
+          />
           <div class="card__text-container">
-            <h2 class="card__title">Valle de Yosemite</h2>
+            <h2 class="card__title">Tower of Liberty</h2>
             <button class="card__like-button"></button>
           </div>
         </div>
 
         <div class="card__container">
-          <img class="card__img" src="./img/card-1.jpg" alt="Card 6" />
+          <img class="card__img" src="./img/card-6.jpg" alt="Seattle" />
           <div class="card__text-container">
-            <h2 class="card__title">Valle de Yosemite</h2>
+            <h2 class="card__title">Seattle</h2>
             <button class="card__like-button"></button>
           </div>
         </div>
