feature: add modal-post

--- a/index.html
+++ b/index.html
@@ -69,6 +69,28 @@
             <button class="modal__close"></button>
           </div>
         </div>
+
+        <div class="modal-post">
+          <div class="modal__container_post">
+            <h2 class="modal__title">New Post</h2>
+            <form class="modal__form">
+              <input
+                class="modal__input modal__profile-name"
+                type="text"
+                value="username"
+                required
+              />
+              <input
+                class="modal__input modal__profile-title"
+                type="text"
+                value="usertitle"
+                required
+              />
+              <button class="modal__form-submit">Guardar</button>
+            </form>
+            <button class="modal__close"></button>
+          </div>
+        </div>
       </section>
       <section class="cards">
         <div class="card__container">
