--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
 
         <div class="modal-post">
-          <div class="modal__container_post">
+          <div class="modal__container">
             <h2 class="modal__title">New Post</h2>
             <form class="modal__form">
               <input
