fix: fix modal close for both modals

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               />
               <button class="modal__form-submit">Guardar</button>
             </form>
-            <button class="modal__close"></button>
+            <button class="modal-post__close"></button>
           </div>
         </div>
       </section>
