style: translate create post modal text

--- a/index.html
+++ b/index.html
@@ -72,21 +72,21 @@
 
         <div class="modal-post">
           <div class="modal__container">
-            <h2 class="modal__title">New Post</h2>
+            <h2 class="modal__title">Nuevo Lugar</h2>
             <form class="modal__form">
               <input
                 class="modal__input modal__profile-name"
                 type="text"
-                value="username"
+                value="Título"
                 required
               />
               <input
                 class="modal__input modal__profile-title"
                 type="text"
-                value="usertitle"
+                value="Enlace a la imágen"
                 required
               />
-              <button class="modal__form-submit">Guardar</button>
+              <button class="modal__form-submit">Crear</button>
             </form>
             <button class="modal-post__close"></button>
           </div>
