feature: prepare template for cards

--- a/index.html
+++ b/index.html
@@ -153,6 +153,17 @@
         <h2 class="footer__copyright">© 2021 Alrededor de los EEUU</h2>
       </section>
     </div>
+
+    <template id="cards">
+      <div class="card__container">
+        <img class="card__img" src="" alt="" />
+        <div class="card__text-container">
+          <h2 class="card__title"></h2>
+          <button class="card__like-button"></button>
+        </div>
+      </div>
+    </template>
+
     <script src="./scripts/modal.js"></script>
   </body>
 </html>
