fix: change input type to URL

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               />
               <input
                 class="modal__input modal__profile-cardurl"
-                type="text"
+                type="url"
                 value="Enlace a la imágen"
                 required
               />
