feature: add function to add new card from form submit and create cards from array

--- a/index.html
+++ b/index.html
@@ -86,13 +86,16 @@
                 value="Enlace a la imágen"
                 required
               />
-              <button class="modal__form-submit">Crear</button>
+              <button class="modal__form-submit modal__form-create">
+                Crear
+              </button>
             </form>
             <button class="modal-post__close"></button>
           </div>
         </div>
       </section>
       <section class="cards">
+        <!--
         <div class="card__container">
           <img
             class="card__img"
@@ -148,7 +151,9 @@
             <button class="card__like-button"></button>
           </div>
         </div>
+        -->
       </section>
+
       <section class="footer">
         <h2 class="footer__copyright">© 2021 Alrededor de los EEUU</h2>
       </section>
