style: add trash icon

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 
     <template id="cards">
       <div class="card__container">
+        <button class="card__remove-button"></button>
         <img class="card__img" src="" alt="" />
         <div class="card__text-container">
           <h2 class="card__title"></h2>
