feature: add html code for image modals

--- a/index.html
+++ b/index.html
@@ -101,6 +101,17 @@
       </section>
     </div>
 
+    <div class="modal__type_image">
+      <div class="modal__overlay"></div>
+      <div class="modal__window modal__window_remove-styles">
+        <button class="modal-image__close"></button>
+        <figure>
+          <img src="" alt="" class="modal__full-img" />
+          <figcaption class="modal__img-caption"></figcaption>
+        </figure>
+      </div>
+    </div>
+
     <template id="cards">
       <div class="card__container">
         <button class="card__remove-button"></button>
