style: add css for modal__type-img

--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
       </section>
     </div>
 
-    <div class="modal__type_image">
+    <div class="modal__type-img">
       <div class="modal__overlay"></div>
       <div class="modal__window modal__window_remove-styles">
         <button class="modal-image__close"></button>
         <figure>
-          <img src="" alt="" class="modal__full-img" />
+          <img src="" alt="" class="modal__img" />
           <figcaption class="modal__img-caption"></figcaption>
         </figure>
       </div>
