fix: modal-post nesting

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </div>
         </div>
 
-        <div class="modal-post">
+        <div class="modal modal-post">
           <div class="modal__container">
             <h2 class="modal__title">Nuevo Lugar</h2>
             <form class="modal__form">
