--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h1 class="profile__name">Luis Tellez</h1>
             <button class="profile__edit-button">
               <img
-                class="profile__edit-button_icon"
+                class="profile__edit-icon"
                 src="./img/edit.svg"
                 alt="edit button"
               />
@@ -41,7 +41,7 @@
         <div class="profile__container-right">
           <button class="profile__post-button">
             <img
-              class="profile__post-button_icon"
+              class="profile__post-icon"
               src="./img/post.svg"
               alt="post button"
             />
