style: add names to both modal forms

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="modal">
           <div class="modal__container">
             <h2 class="modal__title">Edit profile</h2>
-            <form class="modal__form">
+            <form class="modal__form" name="editProfile">
               <input
                 class="modal__input modal__profile-name"
                 type="text"
@@ -73,7 +73,7 @@
         <div class="modal modal-post">
           <div class="modal__container">
             <h2 class="modal__title">Nuevo Lugar</h2>
-            <form class="modal__form">
+            <form class="modal__form" name="newPlace">
               <input
                 class="modal__input modal__profile-cardtitle"
                 type="text"
