--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
                 class="modal__input modal__profile-name"
                 type="text"
                 value="username"
+                minlength="2"
+                maxlength="40"
                 required
               />
               <input
