feature: add min and max lenght in title on editProfile form

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
                 class="modal__input modal__profile-title"
                 type="text"
                 value="usertitle"
+                minlength="2"
+                maxlength="200"
                 required
               />
               <button class="modal__form-submit">Guardar</button>
