--- a/index.html
+++ b/index.html
@@ -116,6 +116,6 @@
       </div>
     </template>
 
-    <script src="./scripts/modal.js"></script>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
