refactor: add button type sumit to editProfile

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 maxlength="200"
                 required
               />
-              <button class="modal__form-submit">Guardar</button>
+              <button type="submit" class="modal__form-submit">Guardar</button>
             </form>
             <button class="modal__close"></button>
           </div>
