style: personalize classes in validate.js boiler code

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               />
               <button type="submit" class="modal__form-submit">Guardar</button>
             </form>
-            <button class="modal__close"></button>
+            <button class="modal__button modal__close"></button>
           </div>
         </div>
 
@@ -94,7 +94,7 @@
                 Crear
               </button>
             </form>
-            <button class="modal-post__close"></button>
+            <button class="modal__button modal-post__close"></button>
           </div>
         </div>
       </section>
