fix: rename to modal-close button

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 Crear
               </button>
             </form>
-            <button class="modal__button modal-post__close"></button>
+            <button class="modal__close-button modal-post__close"></button>
           </div>
         </div>
       </section>
