--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               />
               <button type="submit" class="modal__form-submit">Guardar</button>
             </form>
-            <button class="modal__button modal__close"></button>
+            <button class="modal__close-button modal__close"></button>
           </div>
         </div>
 
