feature: add min and max input for modal__input for new place modal

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
                 class="modal__input modal__profile-cardtitle"
                 type="text"
                 value="Título"
+                minlength="2"
+                maxlength="30"
                 required
               />
               <input
