feature: add span error to rest of inputs

--- a/index.html
+++ b/index.html
@@ -54,20 +54,28 @@
             <form class="modal__form" name="editProfile">
               <input
                 class="modal__input modal__profile-name"
+                id="edit-profile-name"
                 type="text"
                 value="username"
                 minlength="2"
                 maxlength="40"
                 required
               />
+              <span class="modal__error" id="edit-profile-name-error">
+                Por favor, rellena este campo.</span
+              >
               <input
                 class="modal__input modal__profile-title"
+                id="edit-profile-title"
                 type="text"
                 value="usertitle"
                 minlength="2"
                 maxlength="200"
                 required
               />
+              <span class="modal__error" id="edit-profile-title-error">
+                Por favor, rellena este campo.</span
+              >
               <button type="submit" class="modal__form-submit">Guardar</button>
             </form>
             <button class="modal__close-button modal__close"></button>
