--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body class="main">
     <div class="main__container">
       <header class="header">
-        <img class="header__logo" src="./img/logo.svg" alt="Logo Around" />
+        <img class="header__logo" src="./images/logo.svg" alt="Logo Around" />
         <div class="header__line"></div>
       </header>
       <section class="profile">
@@ -29,7 +29,7 @@
             <button class="profile__edit-button">
               <img
                 class="profile__edit-icon"
-                src="./img/edit.svg"
+                src="./images/edit.svg"
                 alt="edit button"
               />
             </button>
@@ -42,7 +42,7 @@
           <button class="profile__post-button">
             <img
               class="profile__post-icon"
-              src="./img/post.svg"
+              src="./images/post.svg"
               alt="post button"
             />
           </button>
