fix: replace value in inputs with placeholder tag

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 class="modal__input modal__profile-name"
                 id="edit-profile-name"
                 type="text"
-                value="username"
+                placeholder="username"
                 minlength="2"
                 maxlength="40"
                 required
@@ -68,7 +68,7 @@
                 class="modal__input modal__profile-title"
                 id="edit-profile-title"
                 type="text"
-                value="usertitle"
+                placeholder="usertitle"
                 minlength="2"
                 maxlength="200"
                 required
@@ -90,7 +90,7 @@
                 class="modal__input modal__profile-cardtitle"
                 id="new-place-title"
                 type="text"
-                value="Título"
+                placeholder="Título"
                 minlength="2"
                 maxlength="30"
                 required
@@ -102,7 +102,7 @@
                 class="modal__input modal__profile-cardurl"
                 id="new-place-url"
                 type="url"
-                value="Enlace a la imágen"
+                placeholder="Enlace a la imágen"
                 required
               />
               <span class="modal__error" id="new-place-url-error">
