--- a/index.html
+++ b/index.html
@@ -132,6 +132,6 @@
     </template>
 
     <script src="./scripts/index.js"></script>
-    <script src="./scripts/validate.js"></script>
+    <script type="module" src="./scripts/FormValidator.js"></script>
   </body>
 </html>
