--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
       </div>
     </template>
 
-    <script src="./scripts/index.js"></script>
-    <script type="module" src="./scripts/FormValidator.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
     <script type="module" src="./scripts/Card.js"></script>
   </body>
 </html>
