--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
           <span class="modal__error" id="edit-profile-title-error">
             Por favor, rellena este campo.</span
           >
-          <button type="submit" class="modal__form-submit">Guardar</button>
+          <button type="submit" class="modal__form-submit modal__profile-edit">
+            Guardar
+          </button>
         </form>
         <button class="modal__close-button modal__close"></button>
       </div>
