--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="modal">
       <div class="modal__container">
         <h2 class="modal__title">Edit profile</h2>
-        <form class="modal__form" name="editProfile">
+        <form class="modal__form modal__form_profile" name="editProfile">
           <input
             class="modal__input modal__profile-name"
             id="edit-profile-name"
@@ -93,7 +93,7 @@
     <div class="modal modal-post">
       <div class="modal__container">
         <h2 class="modal__title">Nuevo Lugar</h2>
-        <form class="modal__form" name="newPlace">
+        <form class="modal__form modal__form_place" name="newPlace">
           <input
             class="modal__input modal__profile-cardtitle"
             id="new-place-title"
