--- a/src/index.html
+++ b/src/index.html
@@ -130,6 +130,6 @@
       </div>
     </template>
 
-    <script type="module" src="./scripts/utils.js"></script>
+    <script type="module" src="../src/components/utils.js"></script>
   </body>
 </html>
