feat: add classlist "popup" to all  modals

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
         <h2 class="footer__copyright">© 2021 Alrededor de los EEUU</h2>
       </section>
     </div>
-    <div class="modal">
+    <div class="popup modal">
       <div class="modal__container">
         <h2 class="modal__title">Edit profile</h2>
         <form class="modal__form modal__form_profile" name="editProfile">
@@ -91,7 +91,7 @@
       </div>
     </div>
 
-    <div class="modal modal-post">
+    <div class="popup modal modal-post">
       <div class="modal__container">
         <h2 class="modal__title">Nuevo Lugar</h2>
         <form class="modal__form modal__form_place" name="newPlace">
