--- a/src/index.html
+++ b/src/index.html
@@ -123,6 +123,12 @@
       </div>
     </div>
 
+    <div id="lightbox" class="popup">
+      <img class="lightbox__image" src="" alt="" />
+      <p class="lightbox__title">#d</p>
+      <button class="lightbox__close"></button>
+    </div>
+
     <template id="cards">
       <div class="card__container">
         <button class="card__remove-button"></button>
