--- a/src/index.html
+++ b/src/index.html
@@ -125,7 +125,7 @@
 
     <div id="lightbox" class="popup">
       <img class="lightbox__image" src="" alt="" />
-      <p class="lightbox__title">#d</p>
+      <p class="lightbox__title"></p>
       <button class="lightbox__close"></button>
     </div>
 
