fix: to fix BEM, changed lightbox class to popup

--- a/src/index.html
+++ b/src/index.html
@@ -124,9 +124,9 @@
     </div>
 
     <div id="lightbox" class="popup">
-      <img class="lightbox__image" src=" " alt=" " />
-      <p class="lightbox__title"></p>
-      <button class="lightbox__close"></button>
+      <img class="popup__image" src=" " alt=" " />
+      <p class="popup__title"></p>
+      <button class="popup__close"></button>
     </div>
 
     <template id="cards">
