feat: add documentation comments to HTML code

--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,8 @@
         <h2 class="footer__copyright">© 2021 Alrededor de los EEUU</h2>
       </section>
     </div>
+
+    <!--Popup for profile edit-->
     <div class="modal">
       <div class="modal__container">
         <h2 class="modal__title">Edit profile</h2>
@@ -91,6 +93,7 @@
       </div>
     </div>
 
+    <!--Popup for post creation-->
     <div class="modal modal-post">
       <div class="modal__container">
         <h2 class="modal__title">Nuevo Lugar</h2>
@@ -123,12 +126,16 @@
       </div>
     </div>
 
+    <!--Popup for image lightbox-->
     <div id="lightbox" class="popup">
       <img class="popup__image" src=" " alt=" " />
       <p class="popup__title"></p>
       <button class="popup__close"></button>
     </div>
 
+    <!--Popup for delete confirmation-->
+
+    <!--Template for cards-->
     <template id="cards">
       <div class="card__container">
         <button class="card__remove-button"></button>
