feat: add HTML structure for delete confirmation modal

--- a/src/index.html
+++ b/src/index.html
@@ -134,6 +134,13 @@
     </div>
 
     <!--Popup for delete confirmation-->
+    <div class="modal modal-confirmation">
+      <div class="modal__container">
+        <h2 class="modal__title">¿Estás seguro?</h2>
+        <button class="modal__form-submit modal__form-delete">Sí</button>
+        <button class="modal__close-button modal__delete-close"></button>
+      </div>
+    </div>
 
     <!--Template for cards-->
     <template id="cards">
