--- a/src/index.html
+++ b/src/index.html
@@ -136,6 +136,7 @@
     <!--Popup for delete confirmation-->
     <div class="modal modal-confirmation">
       <div class="modal__container">
+        <form class="modal__form modal__form_delete" name="deleteConfirmation">
         <h2 class="modal__title">¿Estás seguro?</h2>
         <button class="modal__form-submit modal__form-delete">Sí</button>
         <button class="modal__close-button modal__delete-close"></button>
