Style: fix margin on delete confirmation modal

--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,7 @@
     <div class="modal modal-confirmation">
       <div class="modal__container">
         <form class="modal__form modal__form_delete" name="deleteConfirmation">
-        <h2 class="modal__title">¿Estás seguro?</h2>
+        <h2 class="modal__title modal__title_delete">¿Estás seguro?</h2>
         <button class="modal__form-submit modal__form-delete">Sí</button>
         <button class="modal__close-button modal__delete-close"></button>
       </div>
