--- a/src/index.html
+++ b/src/index.html
@@ -137,8 +137,9 @@
     <div class="modal modal-confirmation">
       <div class="modal__container">
         <form class="modal__form modal__form_delete" name="deleteConfirmation">
-        <h2 class="modal__title modal__title_delete">¿Estás seguro?</h2>
-        <button class="modal__form-submit modal__form-delete">Sí</button>
+          <h2 class="modal__title modal__title_delete">¿Estás seguro?</h2>
+          <button class="modal__form-submit modal__form-delete">Sí</button>
+        </form>
         <button class="modal__close-button modal__delete-close"></button>
       </div>
     </div>
